Partial Revert "HIVE-26473: Hive JDK-17 support for compile and runtime (#5404)" - for JDK 11